@@ -1,16 +1,10 @@
 backgrounddir = $(datadir)/pixmaps/backgrounds/gnome/abstract
 
 background_DATA =\
-	due-alt.jpg \
-	intenso-alt.jpg \
-	onda-alt.jpg \
-	raggi-alt.jpg \
-	scie-alt.jpg \
 	due.jpg \
-	intenso.jpg \
-	onda.jpg \
-	raggi.jpg \
+	due-alt.jpg \
 	scie.jpg
+	scie-alt.jpg \
 
 
 metadata_in_files = gnome-abstract.xml.in
