@@ -1,5 +1,5 @@
 AC_INIT(translucent)
-AM_INIT_AUTOMAKE(gnome-backgrounds, 0.1)
+AM_INIT_AUTOMAKE(gnome-backgrounds, 2.9)
 
 # Internationalization:
 GETTEXT_PACKAGE=gnome-backgrounds
@@ -21,4 +21,4 @@ branded/Makefile
 tiles/Makefile
 translucent/Makefile
 po/Makefile
-])	
+])
